--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,7 @@ a {
 }
 .text h1 {
   color: #fff;
+  line-height: normal;
 }
 .linkedin-text {
   color: #423d3d;
@@ -269,7 +270,7 @@ a {
   justify-content: space-between;
 }
 
-.fo
+
 
 .dash {
   opacity: 0.2;
@@ -395,14 +396,16 @@ word-break: break-all;
   animation: fadeIn 8s;
 }
 .first a, .fourth a{
-  color: #ffba08;
-  text-shadow: 1px 2px 4px #000;
-  padding: 1em 0;
+  color: #fff;
+font-weight: 500;
+  background-color: #000;
+border-radius: 1em;
+padding: 1em;
+  margin: 1em;
 }
 .first a:hover, .fourth a:hover{
-  color: #fff;
-}
-
+  background-color:#ffba08;
+  }
 
 
 
@@ -413,6 +416,13 @@ word-break: break-all;
   overflow-x: scroll;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
+
+.one {
+  scroll-snap-align: start;
 }
 
 .one {
@@ -530,7 +540,8 @@ word-break: break-all;
 .studio-div {
   padding: 1em;
   margin: auto;
-  width: 70vw;
+
+ word-wrap: break-word;
   animation: fadeFromTop 7s;
 }
 .studio-div h3{
@@ -539,7 +550,7 @@ word-break: break-all;
   text-transform: uppercase;
 }
 .studio-div svg {
-  width: 100px;
+  max-width: 80px;
 
 }
 
@@ -547,13 +558,15 @@ word-break: break-all;
 .studio-invest-section {
   background-color: #000;
   color: #fff;
+
+  flex-wrap: wrap;
   padding: 1em;
 }
 
 .studio-big-box {
   background-color: #fff;
   color: #000;
-  width: 80%;
+
   margin: auto;
   padding: 1em;
   border-radius: 30px;
@@ -1811,13 +1824,10 @@ justify-self: center;
   line-height: 1.2em;
 }
 .first a, .fourth a{
-  color: #ffba08;
-  text-shadow: 1px 2px 4px #000;
-  padding: 1em 0;
+  color: #000;
+ background: #fff;
 }
-.first a:hover, .fourth a:hover{
-  color: #fff;
-}
+
 .one{
   display: flex;
   flex-direction: column;
@@ -1845,6 +1855,12 @@ justify-self: center;
 .studios-main > p{
 margin: auto;
   width: 50vw;
+}
+.studio-invest-section .flex{ 
+word-wrap: break-word;
+  flex-shrink: 1;
+  flex-basis: auto;
+  
 }
 
 
