--- a/styles.css
+++ b/styles.css
@@ -142,17 +142,20 @@ header span{
 }
  .menu1 > .mail-link{
   text-decoration: underline;
-  color: #000;
-  background-color: #fff;
-  padding: 1em;
-padding: auto;
+  color: #fff;
+  background-color: #000;
+
+padding: 0.6em;
 min-width: 30vw;
+border: #fff 1px solid;
+border-radius: 1rem;
 margin: auto;
-font-weight: 800;
+font-weight: 400;
 
 }
 .mail-link:hover{
   color:#ffba08;
+  background-color: #fff;
   
 }
 
@@ -1792,6 +1795,43 @@ justify-self: center;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (min-width: 768px) {
 
 
@@ -1946,3 +1986,5 @@ flex-wrap: wrap;
 
   
 }
+
+
